# note_effects_vst

./: Cargo.toml  README.md  cargo.toml  osx_vst_bundler.sh
.github/workflows/: rust.yml
arpegiator/: Cargo.toml  build.rs
arpegiator/src/: change.rs  device.rs  device_out.rs  expressive_note.rs  lib.rs  midi_controller_worker.rs  parameters.rs  pattern.rs  pattern_device.rs  socket.rs  system.rs  worker.rs
arpegiator/src/midi_messages/: change.rs  device.rs  device_out.rs  expressive_note.rs  mod.rs  note.rs  pattern.rs  pattern_device.rs  timed_event.rs
arpegiator/src/workers/: ipc_worker.rs  main_worker.rs  midi_output_worker.rs  mod.rs
arpegiator_pattern_receiver/: Cargo.toml
arpegiator_pattern_receiver/src/: ipc_worker.rs  lib.rs  parameters.rs  socket.rs
audio_data/: Cargo.toml
audio_data/src/: lib.rs
filter_out_non_note/: Cargo.toml
filter_out_non_note/src/: lib.rs
max_note_duration/: Cargo.toml
max_note_duration/src/: lib.rs  parameters.rs
midi_delay/: Cargo.toml
midi_delay/src/: lib.rs  parameters.rs
note_fan_out/: Cargo.toml
note_fan_out/src/: lib.rs  parameters.rs
note_generator/: Cargo.toml
note_generator/src/: lib.rs  parameters.rs
note_off_delay/: Cargo.toml
note_off_delay/src/: datastructures.rs  events.rs  lib.rs  messages.rs  parameters.rs  tests.rs
src/: lib.rs  parameters.rs
src/util/: mod.rs  parameter_value_conversion.rs  parameters.rs
util/: Cargo.toml
util/src/: absolute_time_midi_message.rs  absolute_time_midi_message_vector.rs  constants.rs  datastructures.rs  debug.rs  delayed_message_consumer.rs  ipc_payload.rs  lib.rs  logging.rs  messages.rs  midi_message_type.rs  midi_message_with_delta.rs  parameter_value_conversion.rs  parameters.rs  pattern_payload.rs  raw_message.rs  system.rs  transmute_buffer.rs
