[package]
name = "note_generator"
version = "0.1.1"
authors = ["Vincent Alsteen <vincent.alsteen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = { git = "https://github.com/rustaudio/vst-rs" }
primitive_enum = "1.0.2"

[lib]
name = "note_generator"
crate-type = ["cdylib", "lib"]
