[package]
name = "arpegiator"
version = "0.1.0"
authors = ["Vincent Alsteen <vincent.alsteen@gmail.com>"]
edition = "2018"

[dependencies]
vst = { git = "https://github.com/rustaudio/vst-rs" }
util = { path = "../util" }
build-info = "0.0.23"
log = "0.4.14"
num-traits = "0.2.14"
itertools = "0.10.0"
bincode = "1.3.3"
midir = "0.7.0"
async-std = "1.9.0"
async-channel = "1.6.1"
futures-lite = "1.12.0"
ipc-channel = "0.15.0"
uuid = "0.8.2"

[build-dependencies]
build-info-build = "0.0.23"

[lib]
name = "arpegiator"
crate-type = ["cdylib", "lib"]

[features]
default = ["pressure_as_channel_pressure", "forward_pattern_cc", "worker_debug", "midi_hack_transmission"]

pressure_as_channel_pressure = []
pressure_as_aftertouch = []
pressure_as_cc7 = []

worker_debug = []
forward_note_cc = []
forward_pattern_cc = []
device_debug = []
midi_hack_transmission = []


[target.'cfg(target_os = "macos")'.dependencies.coremidi]
version = "0.4.0"

[target.'cfg(target_os = "macos")'.dependencies.mach]
version = "0.3"
