[package]
name = "arpegiator_pattern_receiver"
version = "0.1.0"
authors = ["Vincent Alsteen <vincent.alsteen@gmail.com>"]
edition = "2018"

[dependencies]
vst = { git = "https://github.com/rustaudio/vst-rs" }
util = { path = "../util" }
build-info = "0.0.20"
log = "0.4.11"
serde = "1.0.118"
bincode = "1.3.1"
async-std = "1.8.0"
async-channel = "1.5.1"
futures-lite = "1.11.3"
ipc-channel = "0.14.1"
itertools = "0.10.0"

[build-dependencies]
build-info-build = "0.0.20"

[lib]
name = "arpegiator_pattern_receiver"
crate-type = ["cdylib", "lib"]

[target.'cfg(target_os = "macos")'.dependencies.mach]
version = "0.3"

[features]
# this transmits midi via the vst output instead of using an IPC, setting the highest bit to 0 so we transmit
# midi messages in the range 0x00-0x7F and it does not interfer with any other message. Somehow bitwig just passes
# those messages while sysex are being blocked.
default = ["midi_hack_transmission"]
midi_hack_transmission = []
