[package]
name = "max_note_duration"
version = "0.1.0"
authors = ["Vincent Alsteen <vincent.alsteen@gmail.com>"]
edition = "2018"

[dependencies]
vst = { git = "https://github.com/rustaudio/vst-rs" }
util = { path = "../util" }
build-info = "0.0.20"

[build-dependencies]
build-info-build = "0.0.20"

[lib]
name = "max_note_duration"
crate-type = ["cdylib", "lib"]
