[package]
name = "midi_delay"
version = "0.1.0"
authors = ["Vincent Alsteen <vincent.alsteen@gmail.com>"]
edition = "2018"

[dependencies]
vst = { git = "https://github.com/rustaudio/vst-rs" }
util = { path = "../util" }
log = "0.4.11"
build-info = "0.0.23"

[lib]
name = "midi_delay"
crate-type = ["cdylib", "lib"]

[build-dependencies]
build-info-build = "0.0.23"
