[package]
name = "note_off_delay"
version = "0.1.0"
authors = ["Vincent Alsteen <vincent.alsteen@gmail.com>"]
edition = "2018"

[dependencies]
vst = { git = "https://github.com/rustaudio/vst-rs" }
util = { path = "../util" }
build-info = "0.0.23"
log = "0.4.14"

[build-dependencies]
build-info-build = "0.0.23"

[lib]
name = "note_off_delay"
crate-type = ["cdylib", "lib"]
