[package]
name = "util"
version = "0.1.0"
authors = ["Vincent Alsteen <vincent.alsteen@gmail.com>"]
edition = "2018"

[dependencies]
vst = { git = "https://github.com/rustaudio/vst-rs" }
global_counter = "0.2.1"
log = "0.4.11"
simplelog = "0.9.0"
build-info = "0.0.20"
serde = "1.0.118"

[dependencies.log-panics]
version = "2.0.0"
features = ["with-backtrace"]

[build-dependencies]
build-info-build = "0.0.20"

[features]
default = ["enable_logging"]
enable_logging = []
